--- a/lib/src/auth/sign_up/sign_up_component.html
+++ b/lib/src/auth/sign_up/sign_up_component.html
@@ -1,1 +1,23 @@
-<p>sign up component works</p>
+<section>
+    <div class="mdc-card size">
+        <div class="card__primary">
+            <h2 class="card__title">Sign Up</h2>
+        </div>
+        <div class="card__secondary">
+            <form id="signUpForm">
+                <material-input label="Email" type="email" class="full-width">
+                </material-input>
+                <material-input label="Name" type="text" class="full-width">
+                </material-input>
+                <material-input label="Password" type="password" class="full-width">
+                </material-input>
+            </form>
+        </div>
+        <div class="mdc-card__actions">
+            <div class="mdc-card__action-buttons">
+                <material-button type="submit" form="signUpForm">Sign Up</material-button>
+                <a>Already have an account?</a>
+            </div>
+        </div>
+    </div>
+</section>
