--- a/lib/src/home/home_component.html
+++ b/lib/src/home/home_component.html
@@ -1,1 +1,31 @@
-<p>home component works</p>
+<section>
+    <div class="header-background">
+        <div class="header-section">
+            <div class="header-headline">
+                <h1 class="mat-h1">Angular Blog</h1>
+                <h2>Make blog grate again!</h2>
+            </div>
+            <div class="header-start">
+                <material-button raised class="accent">Join Now</material-button>
+            </div>
+        </div>
+    </div>
+
+    <div class="homepage-promo">
+        <div class="homepage-row">
+            <div class="homepage-promo-img"></div>
+            <div class="homepage-promo-desc">
+                <h2>Create a post</h2>
+                <p>Post creation have never been simple as now</p>
+            </div>
+        </div>
+
+        <div class="homepage-row homepage-reverse-row">
+            <div class="homepage-promo-img"></div>
+            <div class="homepage-promo-desc">
+                <h2>Review the other posts</h2>
+                <p>Review posts from other users, find something interesting</p>
+            </div>
+        </div>
+    </div>
+</section>
