--- a/lib/src/auth/sign_in/sign_in_component.html
+++ b/lib/src/auth/sign_in/sign_in_component.html
@@ -4,18 +4,18 @@
             <h2 class="card__title">Sign In</h2>
         </div>
         <div class="card__secondary">
-            <form id="signInForm">
-                <material-input label="Email" type="email"
-                                class="full-width">
+            <form id="signInForm" [ngFormModel]="signInForm" (ngSubmit)="signIn()">
+                <material-input label="Email" type="email" class="full-width"
+                                ngControl="email" ngDefaultControl>
                 </material-input>
-                <material-input label="Password" type="password"
-                                class="full-width">
+                <material-input label="Password" type="password" class="full-width"
+                                ngControl="password" ngDefaultControl>
                 </material-input>
             </form>
         </div>
         <div class="mdc-card__actions">
             <div class="mdc-card__action-buttons">
-                <material-button type="submit" form="signInForm">Sign In</material-button>
+                <material-button (trigger)="signIn()">Sign In</material-button>
                 <a>Don't have an account?</a>
             </div>
         </div>
