--- a/web/index.html
+++ b/web/index.html
@@ -3,12 +3,13 @@
   <head>
     <title>ng_blog</title>
     <meta charset="utf-8">
+    <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="favicon.png">
     <script defer src="main.dart.js"></script>
   </head>
-  <body>
+  <ody>
     <ng-blog-app>Loading...</ng-blog-app>
-  </body>
+  </ody>
 </html>
